[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "acmdecoder"
version = "3.0.0"
description = "Decoder for raw binary data from the ACM (Acquisition and Control Module) board"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pybind11",
    "numpy",
    "pandas",
]

[tool.scikit-build]
wheel.packages = ["acmdecoder"]
cmake.source-dir = "cpp"
cmake.version = ">=3.10"
cmake.build-type = "Release"
