[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "acmdecoder"
version = "0.1.0"
description = "Decoder for raw binary data from the ACM (Acquisition and Control Module) board"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSES/*"]
dependencies = [
    "pybind11",
    "numpy",
    "pandas",
]

[tool.scikit-build]
wheel.packages = ["acmdecoder"]
cmake.source-dir = "cpp"
cmake.version = ">=3.14"
cmake.build-type = "Release"

[tool.cibuildwheel]
# zstd and bzip2 are built from source via FetchContent in cpp/CMakeLists.txt
# (forced via ACMDECODER_FETCH_DEPS=1) so wheels are statically self-contained.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-musllinux*", "*-win*"]
test-command = "python -c \"from acmdecoder import Decoder\""
environment = { ACMDECODER_FETCH_DEPS = "1" }
